# model_viewer

./: .gitignore  README.md
assets/config/: fbo.json  settings.json
assets/models/: streetlight.dae
src/: Makefile.am  bbox.c  bbox.h  c_json  collada.c  collada.h  common_gl.h  ds.c  ds.h  game.c  game.h  gui.c  gui.h  hash.c  hash.h  main.c  objloader.c  objloader.h  plyloader.c  plyloader.h  renderable.c  renderable.h  settings.c  shader.c  shader.h  staticMesh.c  staticMesh.h  texture.c  texture.h  timing.c  timing.h  uniformBuffer.c  utilities.c  utilities.h  window.c  window.h
src/shaders/: bbox.glsl  guiTextSDF.glsl  shading.glsl  staticMesh.glsl
src/text/: text.c  text.h
